--- a/exercicios/desafio012/estilo/style.css
+++ b/exercicios/desafio012/estilo/style.css
@@ -1,24 +1,38 @@
-@charset "UTF-8";
+@charset "UTF-";
+
+  @import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+
+:root{
+    --fonte1: Verdana, Geneva, Sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
     background-color: black;
     color: white;
     text-align: center;
+    
 }
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -38,6 +52,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -51,7 +67,8 @@ section.imagem{
 }
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.158);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer{
