--- a/exercicios/desafio012/estilo/style.css
+++ b/exercicios/desafio012/estilo/style.css
@@ -53,7 +53,11 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
+    font-size: 2.7vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -63,12 +67,25 @@ section.normal{
 section.imagem{
     background-color: darkmagenta;
     color: white;
-
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.459);
+    background-attachment: fixed;
 }
 section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.158);
+    background-color: rgba(0, 0, 0, 0.5);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.418);
+}
+
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
 }
 
 footer{
